# bender-bot-legacy

./: .env.example  .gitignore  Cargo.toml  readme.md
src/: main.rs
src/backup/: mod.rs
src/chat/: mod.rs
src/commands/: mod.rs  ping.rs  play.rs
src/music/: handler.rs  mod.rs  player.rs  playlist.rs  query.rs
src/network/: mod.rs
src/services/: music.rs
src/status/: mod.rs
