[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
youtube_dl = "0.7.0"
chrono = "0.4.19"
tracing = "0.1"
tracing-subscriber = "0.3.10"
tracing-futures = "0.2"
octocrab = "0.15"
serde_json = "1.0.79"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"

[dependencies.songbird]
version = "0.2.2"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.10"
default-features = true
features = ["client", "gateway", "model", "rustls_backend", "voice"]
