[package]
name = "bender-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-stats = "1.1.0"
youtube_dl = "0.8.1"
chrono = "0.4.19"
tracing = "0.1"
tracing-subscriber = "0.3.10"
tracing-futures = "0.2"
serde = "1.0.164"
serde_json = "1.0.79"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
querystring = "1.1.0"
humantime = "2.1"
serenity-additions = "0.3.1"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"

[dependencies.songbird]
version = "0.3.2"
features = ["yt-dlp"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.4"
default-features = true
features = ["client", "gateway", "model", "rustls_backend", "voice"]
